# python-utility-scripts

./: .flake8  .gitignore  .pre-commit-config.yaml  OWNERS  README.md  config.example.yaml  example.jira.cfg  example.jira.yaml  pyproject.toml  pytest.ini  renovate.json  tox.ini
.github/: in-solidarity.yml
app/: utils.py
app/polarion/: polarion_set_automated.py  polarion_utils.py  polarion_verify_tc_requirements.py
app/unused_code/: unused_code.py
apps/: utils.py
apps/jira_utils/: README.md  exceptions.py  get_jira_information.py  jira_information.py  jira_utils.py  utils.py
apps/polarion/: README.md  exceptions.py  polarion_set_automated.py  polarion_utils.py  polarion_verify_tc_requirements.py
apps/unused_code/: README.md  unused_code.py
tests/: test_unused_code.py  utils.py
tests/jira_utils/: test_jira.py  test_jira_cfg_file.yaml  test_jira_utils.py
tests/polarion/: test_polarion.py  test_polarion_automated.py  test_polarion_set_automated_coverage.py  test_polarion_verify_tc_requirements_coverage.py  test_verify_polarion_requirements.py
tests/unused_code/: test_doc_header_false_positives.py  test_unused_code.py  test_unused_code_coverage.py  test_unused_code_keyword_unpacking.py  unused_code_file_for_test.py
tests/unused_code/manifests/: functions_as_args.py  test_config.yaml  unused_code_file_for_test.py
utility_scripts/: click_list_type.py
utility_scripts/polarion/: polarion_utils.py  polarion_verify_tc_requirements.py
utility_scripts/unused_code/: README.md  unused_code.py
