[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.poetry]
name = "python-utility-scripts"
version = "0.0.1"
description = "Python utility scripts"
authors = ["dbasunag <dbasunag@redhat.com>"]
license = "Apache License 2.0"
readme = "README.md"

packages = [
    { include = "app" },
]

[tool.poetry.scripts]
unusedcode = "app.unused_code.unused_code:get_unused_functions"


[tool.poetry.dependencies]
python = "^3.8"
python-simple-logger = "^1.0.8"
pylero = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
